# game-of-life-demo

./: BUILD.bazel  README.md  WORKSPACE  bazel-GameOfLifeDemo  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  build.gradle  gameoflife_workspace.bzl  pom.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/java/io/opencensus/example/gameoflife/: ClientzHandler.java  ClientzHandlers.java  GameOfLife.java  GameOfLifeApplication.java  GameOfLifeClient.java  GameOfLifeServer.java  GolUtils.java
src/main/java/io/opencensus/examples/grpc/gameoflife/: ClientzHandler.java  GameOfLife.java  GameOfLifeApplication.java  GameOfLifeClient.java  GameOfLifeServer.java  GolUtils.java
src/main/proto/: game_of_life.proto
