load("//:gameoflife_workspace.bzl", "gameoflife_java_libraries")
load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")

gameoflife_java_libraries()

proto_library(
    name = "game-of-life_proto",
    srcs = ["src/main/proto/game_of_life.proto"],
)

java_proto_library(
    name = "game-of-life_java_proto",
    deps = [":game-of-life_proto"],
)

java_grpc_library(
    name = "game-of-life_java_grpc",
    srcs = [":game-of-life_proto"],
    deps = [":game-of-life_java_proto"],
)

java_library(
    name = "gameoflife",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    resources = glob(
        ["src/main/resources/**"],
    ),
    deps = [
        ":game-of-life_java_grpc",
        ":game-of-life_java_proto",
        "@com_google_api_grpc_proto_google_common_protos//jar",
        "@com_google_guava_guava//jar",
        "@grpc_java//core",
        "@grpc_java//netty",
        "@grpc_java//protobuf",
        "@grpc_java//stub",
        "@io_opencensus_opencensus_api//jar",
        "@io_opencensus_opencensus_contrib_zpages//jar",
        "@io_opencensus_opencensus_exporter_stats_stackdriver//jar",
        "@io_opencensus_opencensus_exporter_stats_prometheus//jar",
        "@io_opencensus_opencensus_exporter_trace_logging//jar",
        "@io_opencensus_opencensus_exporter_trace_stackdriver//jar",
        "@io_opencensus_opencensus_contrib_grpc_metrics//jar",
        "@io_prometheus_simpleclient//jar",
        "@io_prometheus_simpleclient_httpserver//jar",
    ],
    runtime_deps = [
        "@com_google_api_gax//jar",
        "@com_google_api_gax_grpc//jar",
        "@com_google_auth_credentials//jar",
        "@com_google_api_api_common//jar",
        "@com_google_api_grpc_proto_google_cloud_monitoring_v3//jar",
        "@com_google_api_grpc_proto_google_common_protos//jar",
        "@com_google_auth_google_auth_library_credentials//jar",
        "@com_google_cloud_google_cloud_core//jar",
        "@com_google_cloud_google_cloud_core_grpc//jar",
        "@com_google_cloud_google_cloud_monitoring//jar",

        "@com_google_api_grpc_proto_google_cloud_trace_v1//jar",
        "@com_google_api_grpc_proto_google_cloud_trace_v2//jar",
        "@com_google_api_grpc_proto_google_iam_v1//jar",
        "@com_google_auth_google_auth_library_oauth2_http//jar",
        "@com_google_cloud_google_cloud_trace//jar",
        "@com_google_http_client_google_http_client//jar",
        "@com_google_http_client_google_http_client_jackson2//jar",
        "@com_google_instrumentation_instrumentation_api//jar",
        "@com_google_protobuf_protobuf_java//jar",
        "@com_google_protobuf_protobuf_java_util//jar",
        "@commons_codec_commons_codec//jar",
        "@commons_logging_commons_logging//jar",
        "@io_grpc_grpc_auth//jar",
        "@io_grpc_grpc_protobuf_lite//jar",
        "@joda_time_joda_time//jar",
        "@org_apache_httpcomponents_httpclient//jar",
        "@org_apache_httpcomponents_httpcore//jar",
        "@org_threeten_threetenbp//jar",

        "@com_lmax_disruptor//jar",
        "@com_fasterxml_jackson_core_jackson_core//jar",
        "@io_grpc_grpc_context//jar",
        "@io_netty_netty_buffer//jar",
        "@io_netty_netty_common//jar",
        "@io_netty_netty_codec//jar",
        "@io_netty_netty_codec_socks//jar",
        "@io_netty_netty_codec_http//jar",
        "@io_netty_netty_codec_http2//jar",
        "@io_netty_netty_handler//jar",
        "@io_netty_netty_handler_proxy//jar",
        "@io_netty_netty_resolver//jar",
        "@io_netty_netty_tcnative_boringssl_static//jar",
        "@io_netty_netty_transport//jar",
        "@io_opencensus_opencensus_impl//jar",
        "@io_opencensus_opencensus_impl_core//jar",
    ],
)

java_binary(
    name = "game-of-life-client",
    testonly = 1,
    main_class = "io.opencensus.example.gameoflife.GameOfLifeClient",
    runtime_deps = [
        ":gameoflife",
    ],
)

java_binary(
    name = "game-of-life-server",
    testonly = 1,
    main_class = "io.opencensus.example.gameoflife.GameOfLifeServer",
    runtime_deps = [
        ":gameoflife",
    ],
)
